<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="이메일"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ed_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/ed_email" />

        <EditText
            android:id="@+id/ed_pw_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/ed_pw" />

        <EditText
            android:id="@+id/ed_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="닉네임"
            app:layout_constraintTop_toBottomOf="@+id/ed_pw_check" />

        <EditText
            android:id="@+id/ed_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintTop_toBottomOf="@+id/ed_nick" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ed_birth">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_man"
                android:text="@string/genderMan" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_woman"
                android:text="@string/genderWoman" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_no_choice"
                android:checked="true"
                android:text="@string/genderNoChoice" />
        </RadioGroup>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cb_service"
            android:text="@string/serviceAgree"
            app:layout_constraintTop_toBottomOf="@id/rg_gender"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cb_marketing"
            android:text="@string/marketingAgree"
            app:layout_constraintTop_toBottomOf="@id/cb_service"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sign_up"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@+id/cb_marketing"
            android:enabled="false"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>